	* Allow setting and displaying icons between 1x1 and 100x100 pixels for
	  ICQ.  Previously only icons between 48x48 and 52x64 were allowed.
	* When using the clientLogin authentication method, prompt for a
	  password on reconnect when "Remember Password" is not checked and
	  authentication fails due to an incorrect password.  (This is the same
	  behavior as the legacy authentication method)

	MSN:
	* Support for version 9 of the MSN protocol has been removed.  This
	  version is no longer supported on the servers.

	XMPP:
	* Direct messages to a specific resource only upon receipt of a message
	  with content (as opposed to a typing notification, etc).  (Thanks to
	  rjoly for testing)
	* When sending data using in-band-bytestreams, interpret the block-size
	  attribute as the size of the BASE64-encoded representation of the data.
	* Validate the hash on incoming BoB data objects (for custom smileys etc.),
	  cache based per JID when the CID is not a valid hash (as specified by the
	  BoB XEP).
	* Present a better error message when authentication fails while trying
	  to connect to Facebook.  (David Reiss, Facebook)

	Yahoo/Yahoo JAPAN:
	* Attempt to better handle transparent proxies interfering with HTTP-based
	  login.
	* Fix handling of P2P packets, thus fixing the loss of some messages.
	* Retrieve the pager server address from Yahoo!'s servers directly.
	* Removed the "Pager server" account option, as it is no longer needed.
	* The authentication code is now less order-sensitive with the components
	  of the server's response.
	* The authentication process now acts more like the official client.

	Finch:
	* New action 'history-search', with default binding ctrl+r, to search
	  the entered string in the input history.

version 2.6.6 (02/18/2010):
	libpurple:
	* Fix 'make check' on OS X. (David Fang)
	* Fix a quirk in purple_markup_html_to_xhtml that caused some messages
	  to be improperly converted to XHTML.